Bug 474946 - Missing upload support for online quotes
Summary: Missing upload support for online quotes
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: master
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-27 18:35 UTC by Ralf Habacker
Modified: 2024-01-22 21:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.73
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2023-09-27 18:35:39 UTC
SUMMARY
The upload support built into knewstuff was discontinued long ago, so there is currently no support for uploading online courses to store.kde.org, the store used by alkimia to retrieve online quotes. 

STEPS TO REPRODUCE
1. inspect https://github.com/KDE/knewstuff/blob/master/TODO

OBSERVED RESULT
There is mentioned that there is no upload support 

EXPECTED RESULT
It would be helpful if there was at least some support within alkimia for this, in that an uploadable package could be created and instructions for uploading would be available.
Comment 1 Ralf Habacker 2023-10-04 09:41:07 UTC
> https://api.kde.org/frameworks/knewstuff/html/classKNS3_1_1UploadDialog.html

Since 5.85, Upload functionality is no longer directly supported and needs complete reimplementation.
Comment 2 Ralf Habacker 2024-01-22 21:18:45 UTC
Git commit 676bc614bdd8223c030685433a69b9f27b45014d by Ralf Habacker.
Committed on 22/01/2024 at 21:49.
Pushed by habacker into branch 'master'.

Add support to upload GHNS online quote source

As the build in support of uploading GHNS sources has been removed
a replacement is added to create a package and hints for uploading.
FIXED-IN:8.1.73

M  +6    -0    src/CMakeLists.txt
A  +14   -0    src/alknewstuffstore.cpp     [License: LGPL(v2.1+)]
A  +23   -0    src/alknewstuffstore.h     [License: LGPL(v2.1+)]
M  +78   -77   src/alkonlinequotedetails.ui
M  +11   -0    src/alkonlinequotes.ui
M  +1    -1    src/alkonlinequotesource.cpp
M  +1    -1    src/alkonlinequotesource.h
M  +13   -0    src/alkonlinequoteswidget.cpp
A  +118  -0    src/alkonlinequoteuploaddialog.cpp  *
A  +46   -0    src/alkonlinequoteuploaddialog.h  *
A  +286  -0    src/alkonlinequoteuploaddialog.ui

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://invent.kde.org/office/alkimia/-/commit/676bc614bdd8223c030685433a69b9f27b45014d