Add support to upload GHNS online quote source

As the build in support of uploading GHNS sources has been removed
a replacement is added to create a package and hints for uploading.

BUG:474946
FIXED-IN:8.2.0