src/alknewstuffstore.cpp
@@ -1,0 +1,14 @@
+/*
+    SPDX-FileCopyrightText: 2024 Ralf Habacker ralf.habacker @freenet.de
+
+    This file is part of libalkimia.
+
+    SPDX-License-Identifier: LGPL-2.1-or-later
+*/
+
+#include "alknewstuffstore.h"
+
+const char *AlkNewStuffStore::alkimiaOnlineQuotes = "https://store.kde.org/browse?cat=560&ord=latest";
+const char *AlkNewStuffStore::packageBaseUrl = "https://store.kde.org/p/";
+const char *AlkNewStuffStore::packageEditSuffix = "/edit";
+const char *AlkNewStuffStore::newPackageUrl = "https://www.pling.com/product/add";
