src/alkonlinequotesource.h
@@ -120,7 +120,7 @@ public:
      * @return true required two identifier
      */
     bool requiresTwoIdentifier() const;
-    QString ghnsWriteFileName();
+    QString ghnsWriteFileName() const;
     void setProfile(AlkOnlineQuotesProfile *profile);
     AlkOnlineQuotesProfile *profile();
     AlkOnlineQuotesProfile *profile() const;
