src/alkonlinequoteswidget.cpp
@@ -13,6 +13,7 @@
 #include "alkonlinequotesprofile.h"
 #include "alkonlinequotesprofilemanager.h"
 #include "alkonlinequotesource.h"
+#include "alkonlinequoteuploaddialog.h"
 #include "alkwebpage.h"
 
 #include <QCheckBox>
@@ -80,6 +81,7 @@ public:
 
     Private(bool showProfiles, bool showUpload, QWidget *parent);
     ~Private();
+
 public Q_SLOTS:
     void slotNewProfile();
     void slotDeleteProfile();
@@ -101,6 +103,7 @@ public Q_SLOTS:
     void slotQuoteSourceRenamed(QTreeWidgetItem *item, int column);
     void slotQuoteSourceStartRename(QTreeWidgetItem *item, int column);
     void slotInstallEntries();
+    void slotUploadEntry();
     void slotShowButton();
 
 public:
@@ -157,6 +160,7 @@ AlkOnlineQuotesWidget::Private::Private(bool showProfiles, bool showUpload, QWid
     profileDetailsBox->setVisible(showProfiles);
     m_showButton->setVisible(!showProfiles && AlkOnlineQuotesProfileManager::instance().webPageEnabled());
     m_ghnsSource->setEnabled(showProfiles);
+    m_uploadButton->setVisible(showUpload);
     m_urlCheckLabel->setMinimumWidth(m_okIcon.width());
 
     loadProfiles();
@@ -216,6 +220,7 @@ AlkOnlineQuotesWidget::Private::Private(bool showProfiles, bool showUpload, QWid
     connect(m_deleteButton, SIGNAL(clicked()), this, SLOT(slotDeleteEntry()));
     connect(m_duplicateButton, SIGNAL(clicked()), this, SLOT(slotDuplicateEntry()));
     connect(m_installButton, SIGNAL(clicked()), this, SLOT(slotInstallEntries()));
+    connect(m_uploadButton, SIGNAL(clicked()), this, SLOT(slotUploadEntry()));
 
     m_quoteSourceList->setColumnCount(2);
     m_quoteSourceList->setHeaderLabels(QStringList() << i18n("Name") << i18n("Source"));
@@ -464,6 +469,7 @@ void AlkOnlineQuotesWidget::Private::updateButtonState()
     m_cancelButton->setEnabled(modified);
     m_duplicateButton->setEnabled(hasWriteSupport);
     m_deleteButton->setEnabled(!m_currentItem.isReadOnly() && !m_currentItem.isGHNS());
+    m_uploadButton->setEnabled(m_profile->hasGHNSSupport() && m_currentItem.isGHNS() && AlkOnlineQuoteUploadDialog::isSupported());
     m_updateButton->setEnabled(modified);
     m_checkButton->setEnabled(isFinanceQuote || !modified);
     m_checkSymbol->setEnabled(!m_currentItem.url().contains("%2"));
@@ -717,6 +723,13 @@ void AlkOnlineQuotesWidget::Private::slotInstallEntries()
     if (engine.showInstallDialog()) {
         loadQuotesList();
     }
+}
+
+void AlkOnlineQuotesWidget::Private::slotUploadEntry()
+{
+    QPointer<AlkOnlineQuoteUploadDialog> dialog = new AlkOnlineQuoteUploadDialog(m_currentItem, false, this);
+    dialog->exec();
+    delete dialog;
 }
 
 void AlkOnlineQuotesWidget::Private::slotShowButton()
